--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 		"dev": "next",
 		"build": "next build",
 		"start": "next start",
-		"export": "npm run build && next export"
+		"deploy": "now && now alias",
+		"now-build": "next build && next export -o dist"
 	},
 	"dependencies": {
 		"@zeit/next-css": "^1.0.1",
