--- a/package.json
+++ b/package.json
@@ -20,8 +20,12 @@
 		"destyle.css": "^1.0.5",
 		"include-media": "^1.4.9",
 		"next": "^8.0.0",
+		"next-compose-plugins": "^2.1.1",
+		"next-seo": "^1.11.1",
+		"next-size": "^2.0.2",
 		"node-sass": "^4.11.0",
 		"react": "^16.8.1",
 		"react-dom": "^16.8.1"
-	}
+	},
+	"browserslist": "> 1%"
 }
