--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"now-build": "next build && next export -o dist"
 	},
 	"dependencies": {
+		"@svgr/webpack": "^4.1.0",
 		"@zeit/next-css": "^1.0.1",
 		"@zeit/next-sass": "^1.0.1",
 		"autoprefixer": "^9.4.7",
